deps/zarrs_jl/zarrs_jl.h

/**
 * Opaque handle types — allocated and managed by libzarrs_jl.
 * Callers interact with these only via pointers.
 */
typedef struct StorageHandle StorageHandle;
typedef struct ArrayHandle ArrayHandle;
typedef struct GroupHandle GroupHandle;
typedef struct IcStorageHandle IcStorageHandle;
typedef struct IcRepoHandle IcRepoHandle;
typedef struct IcSessionHandle IcSessionHandle;
enum ZarrsResult {
  ZARRS_SUCCESS = 0,
  ZARRS_ERROR_NULL_PTR = -1,
  ZARRS_ERROR_STORAGE = -2,
  ZARRS_ERROR_ARRAY = -3,
  ZARRS_ERROR_BUFFER_LENGTH = -4,
  ZARRS_ERROR_INVALID_INDICES = -5,
  ZARRS_ERROR_NODE_PATH = -6,
  ZARRS_ERROR_STORE_PREFIX = -7,
  ZARRS_ERROR_INVALID_METADATA = -8,
  ZARRS_ERROR_STORAGE_CAPABILITY = -9,
  ZARRS_ERROR_UNKNOWN_CHUNK_GRID_SHAPE = -10,
  ZARRS_ERROR_UNKNOWN_INTERSECTING_CHUNKS = -11,
  ZARRS_ERROR_UNSUPPORTED_DATA_TYPE = -12,
  ZARRS_ERROR_GROUP = -13,
  ZARRS_ERROR_INCOMPATIBLE_DIMENSIONALITY = -14,
};
typedef int32_t ZarrsResult;
char *zarrsLastError(void);
void zarrsFreeString(char *s);
char *zarrsVersion(void);
ZarrsResult zarrsCreateStorageFilesystem(const char *path, StorageHandle **pStorage);
ZarrsResult zarrsCreateStorageHTTP(const char *url, StorageHandle **pStorage);
ZarrsResult zarrsCreateStorageS3(const char *bucket,
                                 const char *prefix,
                                 const char *region,
                                 const char *endpoint_url,
                                 int32_t anonymous,
                                 StorageHandle **pStorage);
ZarrsResult zarrsCreateStorageGCS(const char *bucket,
                                  const char *prefix,
                                  int32_t anonymous,
                                  StorageHandle **pStorage);
ZarrsResult zarrsDestroyStorage(StorageHandle *storage);
ZarrsResult zarrsCreateArrayRW(StorageHandle *storage,
                               const char *path,
                               const char *metadata_json,
                               ArrayHandle **pArray);
ZarrsResult zarrsOpenArrayRW(StorageHandle *storage, const char *path, ArrayHandle **pArray);
ZarrsResult zarrsDestroyArray(ArrayHandle *array);
ZarrsResult zarrsArrayGetDimensionality(ArrayHandle *array, uintptr_t *pDimensionality);
ZarrsResult zarrsArrayGetShape(ArrayHandle *array, uintptr_t dimensionality, uint64_t *pShape);
ZarrsResult zarrsArrayGetDataType(ArrayHandle *array, int32_t *pDataType);
ZarrsResult zarrsArrayGetMetadataString(ArrayHandle *array, int32_t pretty, char **pMetadata);
ZarrsResult zarrsArrayGetAttributes(ArrayHandle *array, int32_t pretty, char **pAttributes);
ZarrsResult zarrsArraySetAttributes(ArrayHandle *array, const char *attributes);
ZarrsResult zarrsArrayStoreMetadata(ArrayHandle *array);
ZarrsResult zarrsArrayGetSubsetSize(ArrayHandle *array,
                                    uintptr_t dimensionality,
                                    const uint64_t *pSubsetShape,
                                    uintptr_t *pSubsetSize);