src/libzarrs_api.jl

# This file is automatically generated by gen/generator.jl — DO NOT EDIT.
#
# To regenerate:
#   cd gen/
#   julia --project -e 'using Pkg; Pkg.instantiate()'
#   julia --project generator.jl

module API

# Library path — must be a plain String for ccall((:sym, lib), ...) to work.
# Initialized in __init__() and accessed by all generated ccall wrappers.
libzarrs_jl::String = ""

function __init__()
    global libzarrs_jl = joinpath(
        @__DIR__,
        "..",
        "deps",
        "lib",
        Sys.iswindows() ? "zarrs_jl.dll" :
        Sys.isapple() ? "libzarrs_jl.dylib" : "libzarrs_jl.so",
    )
    if !isfile(libzarrs_jl)
        error(
            "zarrs_jl shared library not found at $(libzarrs_jl). Run `julia deps/build.jl` first.",
        )
    end
end

# ---------------------------------------------------------------------------
# ZarrsResult enum — defined manually because cbindgen emits both
# `enum ZarrsResult { ... }` and `typedef int32_t ZarrsResult` which
# Clang.jl rejects as a duplicate name.
# ---------------------------------------------------------------------------

@enum ZarrsResult::Cint begin
    ZARRS_SUCCESS = 0
    ZARRS_ERROR_NULL_PTR = -1
    ZARRS_ERROR_STORAGE = -2
    ZARRS_ERROR_ARRAY = -3
    ZARRS_ERROR_BUFFER_LENGTH = -4
    ZARRS_ERROR_INVALID_INDICES = -5
    ZARRS_ERROR_NODE_PATH = -6
    ZARRS_ERROR_STORE_PREFIX = -7
    ZARRS_ERROR_INVALID_METADATA = -8
    ZARRS_ERROR_STORAGE_CAPABILITY = -9
    ZARRS_ERROR_UNKNOWN_CHUNK_GRID_SHAPE = -10
    ZARRS_ERROR_UNKNOWN_INTERSECTING_CHUNKS = -11
    ZARRS_ERROR_UNSUPPORTED_DATA_TYPE = -12
    ZARRS_ERROR_GROUP = -13
    ZARRS_ERROR_INCOMPATIBLE_DIMENSIONALITY = -14
end

# ---------------------------------------------------------------------------
# Error handling
# ---------------------------------------------------------------------------

function check_error(result::ZarrsResult)
    result == ZARRS_SUCCESS && return
    msg_ptr = ccall((:zarrsLastError, libzarrs_jl), Ptr{UInt8}, ())
    msg = msg_ptr != C_NULL ? unsafe_string(msg_ptr) : "Unknown zarrs error"
    if msg_ptr != C_NULL
        ccall((:zarrsFreeString, libzarrs_jl), Cvoid, (Ptr{UInt8},), msg_ptr)
    end
    error("zarrs error ($result): $msg")
end

# ---------------------------------------------------------------------------
# Generated bindings
# ---------------------------------------------------------------------------

const StorageHandle = Cvoid

const ArrayHandle = Cvoid

const GroupHandle = Cvoid

const IcStorageHandle = Cvoid

const IcRepoHandle = Cvoid

const IcSessionHandle = Cvoid

"""
    zarrs_last_error()

### Prototype
```c
char *zarrsLastError(void);
```
"""
function zarrs_last_error()
    ptr = ccall((:zarrsLastError, libzarrs_jl), Ptr{UInt8}, ())
    ptr == C_NULL && return nothing
    s = unsafe_string(ptr)
    ccall((:zarrsFreeString, libzarrs_jl), Cvoid, (Ptr{UInt8},), ptr)
    return s
end

"""
    zarrs_free_string(s)

### Prototype
```c
void zarrsFreeString(char *s);
```
"""
function zarrs_free_string(s)
    ccall((:zarrsFreeString, libzarrs_jl), Cvoid, (Cstring,), s)
end

"""
    zarrs_version()

### Prototype
```c
char *zarrsVersion(void);
```
"""
function zarrs_version()
    ptr = ccall((:zarrsVersion, libzarrs_jl), Ptr{UInt8}, ())
    ptr == C_NULL && return nothing
    s = unsafe_string(ptr)
    ccall((:zarrsFreeString, libzarrs_jl), Cvoid, (Ptr{UInt8},), ptr)
    return s
end

"""
    zarrs_create_storage_filesystem(path)

### Prototype
```c
ZarrsResult zarrsCreateStorageFilesystem(const char *path, StorageHandle **pStorage);
```
"""
function zarrs_create_storage_filesystem(path)
    _handle_ptr = Ref{Ptr{Cvoid}}(C_NULL)
    _result = ccall(
        (:zarrsCreateStorageFilesystem, libzarrs_jl),
        ZarrsResult,
        (Cstring, Ptr{Ptr{StorageHandle}}),
        path,
        _handle_ptr,
    )
    check_error(_result)
    return _handle_ptr[]
end

"""
    zarrs_create_storage_http(url)

### Prototype
```c
ZarrsResult zarrsCreateStorageHTTP(const char *url, StorageHandle **pStorage);
```
"""
function zarrs_create_storage_http(url)
    _handle_ptr = Ref{Ptr{Cvoid}}(C_NULL)
    _result = ccall(
        (:zarrsCreateStorageHTTP, libzarrs_jl),
        ZarrsResult,
        (Cstring, Ptr{Ptr{StorageHandle}}),
        url,
        _handle_ptr,
    )
    check_error(_result)
    return _handle_ptr[]
end

"""
    zarrs_create_storage_s3(bucket, prefix, region, endpoint_url, anonymous)

### Prototype
```c
ZarrsResult zarrsCreateStorageS3(const char *bucket, const char *prefix, const char *region, const char *endpoint_url, int32_t anonymous, StorageHandle **pStorage);
```
"""
function zarrs_create_storage_s3(bucket, prefix, region, endpoint_url, anonymous)
    _handle_ptr = Ref{Ptr{Cvoid}}(C_NULL)
    _result = ccall(
        (:zarrsCreateStorageS3, libzarrs_jl),
        ZarrsResult,
        (Cstring, Cstring, Cstring, Cstring, Int32, Ptr{Ptr{StorageHandle}}),
        bucket,
        prefix,
        region,
        endpoint_url,
        anonymous,
        _handle_ptr,
    )
    check_error(_result)
    return _handle_ptr[]
end

"""
    zarrs_create_storage_gcs(bucket, prefix, anonymous)

### Prototype
```c
ZarrsResult zarrsCreateStorageGCS(const char *bucket, const char *prefix, int32_t anonymous, StorageHandle **pStorage);
```
"""
function zarrs_create_storage_gcs(bucket, prefix, anonymous)
    _handle_ptr = Ref{Ptr{Cvoid}}(C_NULL)
    _result = ccall(
        (:zarrsCreateStorageGCS, libzarrs_jl),
        ZarrsResult,
        (Cstring, Cstring, Int32, Ptr{Ptr{StorageHandle}}),
        bucket,
        prefix,
        anonymous,
        _handle_ptr,
    )
    check_error(_result)
    return _handle_ptr[]
end

"""
    zarrs_destroy_storage(storage)

### Prototype
```c
ZarrsResult zarrsDestroyStorage(StorageHandle *storage);
```
"""
function zarrs_destroy_storage(storage)
    _result = ccall(
        (:zarrsDestroyStorage, libzarrs_jl),
        ZarrsResult,
        (Ptr{StorageHandle},),
        storage,
    )
    check_error(_result)
end

"""
    zarrs_create_array_rw(storage, path, metadata_json)

### Prototype
```c
ZarrsResult zarrsCreateArrayRW(StorageHandle *storage, const char *path, const char *metadata_json, ArrayHandle **pArray);
```
"""
function zarrs_create_array_rw(storage, path, metadata_json)
    _handle_ptr = Ref{Ptr{Cvoid}}(C_NULL)
    _result = ccall(
        (:zarrsCreateArrayRW, libzarrs_jl),
        ZarrsResult,
        (Ptr{StorageHandle}, Cstring, Cstring, Ptr{Ptr{ArrayHandle}}),
        storage,
        path,
        metadata_json,
        _handle_ptr,
    )
    check_error(_result)
    return _handle_ptr[]
end

"""
    zarrs_open_array_rw(storage, path)

### Prototype
```c
ZarrsResult zarrsOpenArrayRW(StorageHandle *storage, const char *path, ArrayHandle **pArray);
```
"""
function zarrs_open_array_rw(storage, path)
    _handle_ptr = Ref{Ptr{Cvoid}}(C_NULL)
    _result = ccall(
        (:zarrsOpenArrayRW, libzarrs_jl),
        ZarrsResult,
        (Ptr{StorageHandle}, Cstring, Ptr{Ptr{ArrayHandle}}),
        storage,
        path,
        _handle_ptr,
    )
    check_error(_result)
    return _handle_ptr[]
end

"""
    zarrs_destroy_array(array)

### Prototype
```c
ZarrsResult zarrsDestroyArray(ArrayHandle *array);
```
"""
function zarrs_destroy_array(array)
    _result =
        ccall((:zarrsDestroyArray, libzarrs_jl), ZarrsResult, (Ptr{ArrayHandle},), array)
    check_error(_result)
end

"""
    zarrs_array_get_dimensionality(array)

### Prototype
```c
ZarrsResult zarrsArrayGetDimensionality(ArrayHandle *array, uintptr_t *pDimensionality);
```
"""
function zarrs_array_get_dimensionality(array)
    _out_ref = Ref{Csize_t}(zero(Csize_t))
    _result = ccall(
        (:zarrsArrayGetDimensionality, libzarrs_jl),
        ZarrsResult,
        (Ptr{ArrayHandle}, Ptr{Csize_t}),
        array,
        _out_ref,
    )
    check_error(_result)
    return _out_ref[]
end

"""
    zarrs_array_get_shape(array, dimensionality, pShape)

### Prototype
```c
ZarrsResult zarrsArrayGetShape(ArrayHandle *array, uintptr_t dimensionality, uint64_t *pShape);
```
"""
function zarrs_array_get_shape(array, dimensionality, pShape)
    _result = ccall(
        (:zarrsArrayGetShape, libzarrs_jl),
        ZarrsResult,
        (Ptr{ArrayHandle}, Csize_t, Ptr{UInt64}),
        array,
        dimensionality,
        pShape,
    )
    check_error(_result)
end

"""
    zarrs_array_get_data_type(array)

### Prototype
```c
ZarrsResult zarrsArrayGetDataType(ArrayHandle *array, int32_t *pDataType);
```
"""
function zarrs_array_get_data_type(array)
    _out_ref = Ref{Int32}(zero(Int32))
    _result = ccall(
        (:zarrsArrayGetDataType, libzarrs_jl),
        ZarrsResult,
        (Ptr{ArrayHandle}, Ptr{Int32}),
        array,
        _out_ref,
    )
    check_error(_result)
    return _out_ref[]
end

"""
    zarrs_array_get_metadata_string(array, pretty)

### Prototype
```c
ZarrsResult zarrsArrayGetMetadataString(ArrayHandle *array, int32_t pretty, char **pMetadata);
```
"""
function zarrs_array_get_metadata_string(array, pretty)
    _str_ptr = Ref{Cstring}(C_NULL)
    _result = ccall(
        (:zarrsArrayGetMetadataString, libzarrs_jl),
        ZarrsResult,
        (Ptr{ArrayHandle}, Int32, Ptr{Cstring}),
        array,
        pretty,
        _str_ptr,
    )
    check_error(_result)
    if _str_ptr[] == C_NULL
        return nothing
    end
    _s = unsafe_string(_str_ptr[])
    ccall((:zarrsFreeString, libzarrs_jl), Cvoid, (Cstring,), _str_ptr[])
    return _s
end

"""
    zarrs_array_get_attributes(array, pretty)

### Prototype
```c
ZarrsResult zarrsArrayGetAttributes(ArrayHandle *array, int32_t pretty, char **pAttributes);
```
"""
function zarrs_array_get_attributes(array, pretty)
    _str_ptr = Ref{Cstring}(C_NULL)
    _result = ccall(
        (:zarrsArrayGetAttributes, libzarrs_jl),
        ZarrsResult,
        (Ptr{ArrayHandle}, Int32, Ptr{Cstring}),
        array,
        pretty,
        _str_ptr,
    )
    check_error(_result)
    if _str_ptr[] == C_NULL
        return nothing
    end
    _s = unsafe_string(_str_ptr[])
    ccall((:zarrsFreeString, libzarrs_jl), Cvoid, (Cstring,), _str_ptr[])
    return _s
end

"""
    zarrs_array_set_attributes(array, attributes)

### Prototype
```c
ZarrsResult zarrsArraySetAttributes(ArrayHandle *array, const char *attributes);
```
"""
function zarrs_array_set_attributes(array, attributes)
    _result = ccall(
        (:zarrsArraySetAttributes, libzarrs_jl),
        ZarrsResult,
        (Ptr{ArrayHandle}, Cstring),
        array,
        attributes,
    )
    check_error(_result)
end

"""
    zarrs_array_store_metadata(array)

### Prototype
```c
ZarrsResult zarrsArrayStoreMetadata(ArrayHandle *array);
```
"""
function zarrs_array_store_metadata(array)
    _result = ccall(
        (:zarrsArrayStoreMetadata, libzarrs_jl),
        ZarrsResult,
        (Ptr{ArrayHandle},),
        array,
    )
    check_error(_result)
end

"""
    zarrs_array_get_subset_size(array, dimensionality, pSubsetShape)

### Prototype
```c
ZarrsResult zarrsArrayGetSubsetSize(ArrayHandle *array, uintptr_t dimensionality, const uint64_t *pSubsetShape, uintptr_t *pSubsetSize);
```
"""
function zarrs_array_get_subset_size(array, dimensionality, pSubsetShape)
    _out_ref = Ref{Csize_t}(zero(Csize_t))
    _result = ccall(
        (:zarrsArrayGetSubsetSize, libzarrs_jl),
        ZarrsResult,
        (Ptr{ArrayHandle}, Csize_t, Ptr{UInt64}, Ptr{Csize_t}),
        array,
        dimensionality,
        pSubsetShape,
        _out_ref,
    )
    check_error(_result)
    return _out_ref[]
end

"""
    zarrs_array_retrieve_subset(array, dimensionality, pSubsetStart, pSubsetShape, subsetBytesCount, pSubsetBytes)
